初始化项目目录

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,13 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "paths": {
+    "@/*": [
+      "./src/*"
+    ],
+    "@component/*": [
+      "./src/component/*"
+    ],
+  },
 }
