--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "gh-pages": "^4.0.0",
     "node-sass": "^7.0.1",
